<resources>
    <string name="full_app_name">SBGSoft Virtual SongBook</string>
    <string name="app_name">Virtual SongBook</string>
    <string name="cancel">Cancel</string>
    <string name="sort_by">Sort By:</string>
    <string name="content_description">content_desc</string>
    <string name="logo_content_description">Truth Gaming Logo</string>
    <string name="empty_tempo">00</string>
    <string name="bpm">BPM</string>
    <string name="empty_string"></string>
    <string name="tap_tempo_manual">Manually Set</string>
    <string name="title_activity_open_file">Select A File&#8230;</string>
    <string name="title_activity_open_folder">Select A Folder&#8230;</string>
    <string name="open_file_empty">This Folder is Empty</string>
    <string name="file_type">File Type:</string>
    <string name="select_folder">Select Folder</string>
    <string name="settings_metronome">Metronome Display:</string>
    <string name="settings_metronome_on">Always show metronome</string>
    <string name="settings_metronome_off">Never show metronome</string>
    <string name="settings_metronome_withbpm">Only show metronome on songs with BPM set</string>
    <string name="settings_set_view">Set View:</string>
    <string name="settings_transpose_show">Show transpose button in set view</string>
    <string name="settings_edit_show">Show edit button in set view</string>
    <string name="settings_bright_metronome">Bright Metronome</string>
    <string name="settings_standard_metronome">Standard Metronome</string>
    <string name="settings_metronome_type">Metronome Type:</string>
    <string name="settings_theme_color">Theme Color:</string>
    <string name="settings_chord_color">Chord Color:</string>
    <string name="settings_autoplay">Autoplay background track in set view</string>
    <string name="add_song_name">Song Name (must be unique):</string>
    <string name="add_song_author">Artist Name*:</string>
    <string name="add_song_key">Song Key:</string>
    <string name="add_song_subnote">*These may be left empty&#160;</string>
    <string name="add_song_bpm">BPM*:</string>
    <string name="add_song_time">Time Signature*:</string>
    <string name="add_song_link">Song Link*:</string>
    <string name="add_song_track">Track*:</string>
    <string name="add_song_track_button">Add Background Track</string>
    <string name="songs_row_key_text">Key:&#160;</string>
    <string name="songs_row_author_text">Artist:&#160;</string>
    <string name="title_songs">Songs</string>
    <string name="no_songs">No Songs Currently Exist For This Group</string>
    <string name="title_activity_song">SongActivity</string>
    <string name="empty_song">This song is empty, edit it to add lyrics and chords</string>
    <string name="song_edit_save">Save Song</string>
    <string name="title_activity_edit_song">Edit Song</string>
    <string name="transpose_button">Transpose</string>
    <string name="edit_button">Edit Song</string>
    <string name="font_arrows">Font Size</string>
    <string name="up_arrow">Up Arrow</string>
    <string name="down_arrow">Down Arrow</string>
    <string name="song_group">Song Group:</string>
    <string name="song_find_song">Enter Text To Search:</string>
    <string name="no_sets">No Sets Currently Exist For This Group</string>
    <string name="empty_current">This Set is Empty</string>
    <string name="title_activity_set">SetActivity</string>
    <string name="set_edit_save">Save Set</string>
    <string name="title_sets">Sets</string>
    <string name="title_current_set">Current Set</string>
    <string name="sets_row_date_text">Date:&#160;</string>
    <string name="sets_row_songs_text">Songs:&#160;</string>
    <string name="add_set_name">Set Name (must be unique):</string>
    <string name="add_set_date">Set Date:</string>
    <string name="add_set_link">Set Link:</string>
    <string name="set_group">Set Group:</string>
    <string name="menu_song_groups_create">Create Song Group</string>
    <string name="menu_song_groups_delete_all">Delete All Song Groups</string>
    <string name="menu_song_groups_delete">Delete Song Group&#8230;</string>
    <string name="menu_set_groups">Set Groups&#8230;</string>
    <string name="menu_set_groups_create">Create Set Group</string>
    <string name="menu_set_groups_delete_all">Delete All Set Groups</string>
    <string name="menu_set_groups_delete">Delete Set Group&#8230;</string>
    <string name="menu_sets">Sets&#8230;</string>
    <string name="menu_sets_create">Create Set</string>
    <string name="menu_sets_import">Import Set</string>
    <string name="menu_sets_find">Find Set</string>
    <string name="menu_songs">Songs&#8230;</string>
    <string name="menu_songs_create">Create Song</string>
    <string name="menu_songs_import">Import Song</string>
    <string name="menu_songs_find">Find Song</string>
    <string name="menu_sets_clear">Delete All Sets</string>
    <string name="menu_songs_clear">Delete All Songs</string>
    <string name="menu_song_groups">Song Groups&#8230;</string>
    <string name="menu_backup">Import/Export&#8230;</string>
    <string name="menu_backup_import">Import Database</string>
    <string name="menu_backup_export">Export Database</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About SongBook</string>
    <string name="menu_about_howto">How To...</string>
    <string name="menu_more">More...</string>
    <string name="cmenu_songs_delete">Delete Song</string>
    <string name="cmenu_songs_edit">Edit Song</string>
    <string name="cmenu_songs_edit_att">Edit Song Details</string>
    <string name="cmenu_songs_share">Share Song&#8230;</string>
    <string name="cmenu_songs_share_email">Email as Plain Text</string>
    <string name="cmenu_songs_share_email_cp">Email as ChordPro</string>
    <string name="cmenu_songs_share_email_pdf">Email as PDF</string>
    <string name="cmenu_songs_share_save">Save as Plain Text</string>
    <string name="cmenu_songs_share_save_cp">Save as ChordPro</string>
    <string name="cmenu_songs_share_save_pdf">Save as PDF</string>
    <string name="cmenu_sets_set_song_key">Change Song Key For Set</string>
    <string name="cmenu_sets_delete">Delete Set</string>
    <string name="cmenu_sets_edit">Edit Set Songs</string>
    <string name="cmenu_sets_edit_att">Edit Set Details</string>
    <string name="cmenu_sets_share">Share Set&#8230;</string>
    <string name="cmenu_sets_share_email">Email Songs as Plain Text</string>
    <string name="cmenu_sets_share_email_cp">Email Songs as ChordPro</string>
    <string name="cmenu_sets_share_email_pdf">Email Songs as PDF</string>
    <string name="cmenu_sets_share_save">Save Songs as Plain Text</string>
    <string name="cmenu_sets_share_save_cp">Save Songs as ChordPro</string>
    <string name="cmenu_sets_share_save_pdf">Save Songs as PDF</string>
    <string name="cmenu_sets_share_export">Export Set for SongBook</string>
    <string name="cmenu_sets_reorder">Reorder Set</string>
    <string name="cmenu_song_add_set">Add Song To Set&#8230;</string>
    <string name="cmenu_song_add_curr_set">Add Song To Current Set</string>
    <string name="cmenu_song_group_add">Add Song To Group&#8230;</string>
    <string name="cmenu_song_group_delete">Remove Song From Group</string>
    <string name="cmenu_set_group_add">Add Set To Group&#8230;</string>
    <string name="cmenu_set_group_delete">Remove Set From Group</string>
    <string name="cmenu_sets_remove_song">Remove Song From Set</string>
    <string name="cmenu_songs_stats">Song Stats</string>
    <string name="title_activity_logo">Logo</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string-array name="main_nav_menu">
        <item>Songs&#8230;</item>
        <item>Sets&#8230;</item>
        <item>Song Groups&#8230;</item>
        <item>Set Groups&#8230;</item>
        <item>Import/Export</item>
        <item>Settings</item>
        <item>How To&#8230;</item>
        <item>About SongBook</item>
    </string-array>
    <string-array name="songs_nav_menu">
        <item>Create Song</item>
        <item>Import Song</item>
        <item>Find Song</item>
        <item>Delete All Songs</item>
        <item>Back</item>
    </string-array>
    <string-array name="sets_nav_menu">
        <item>Create Set</item>
        <item>Import Set</item>
        <item>Find Set</item>
        <item>Delete All Sets</item>
        <item>Back</item>
    </string-array>
    <string-array name="songgrp_nav_menu">
        <item>Create Song Group</item>
        <item>Delete Song Group</item>
        <item>Delete All Song Groups</item>
        <item>Back</item>
    </string-array>
    <string-array name="setgrp_nav_menu">
        <item>Create Set Group</item>
        <item>Delete Set Group</item>
        <item>Delete All Set Groups</item>
        <item>Back</item>
    </string-array>
    <string-array name="impexp_nav_menu">
        <item>Import Database</item>
        <item>Export Database</item>
        <item>Back</item>
    </string-array>
    <string-array name="time_signatures">
        <item>1/4</item>
        <item>2/4</item>
        <item>3/4</item>
        <item>4/4</item>
        <item>5/4</item>
        <item>6/4</item>
        <item>3/8</item>
        <item>6/8</item>
        
    </string-array>
    <string-array name="theme_colors">
        <item>Default (Slate)</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Teal</item>
        <item>Purple</item>
        <item>Pink</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Red</item>
        <item>Grey</item>
    </string-array>
    <string-array name="chord_colors">
        <item>Default (Blue)</item>
        <item>Green</item>
        <item>Purple</item>
        <item>Pink</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Black</item>
    </string-array>
    <string-array name="how_tos">
        <item>Create a Set</item>
        <item>Add Songs to a Set</item>
        <item>Import a Song</item>
        <item>Change the Order of Songs in a Set</item>
        <item>Change the Key a Song Uses in a Set</item>
        <item>Use The Metronome</item>
        <item>Use The PageFlip Pedals</item>
    </string-array>
    <string name="title_activity_edit_song_details">Edit Song Details</string>
</resources>