<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_sets" android:menuCategory="container" android:title="@string/menu_sets" android:orderInCategory="2">
        <menu>
            <item android:id="@+id/menu_sets_create" android:title="@string/menu_sets_create"/>
            <item android:id="@+id/menu_sets_import" android:title="@string/menu_sets_import"/>
            <item android:id="@+id/menu_sets_find" android:enabled="true" android:title="@string/menu_sets_find"/>
            <item android:id="@+id/menu_sets_clear" android:title="@string/menu_sets_clear"/>
        </menu>
    </item>
    <item android:id="@+id/menu_songs" android:menuCategory="container" android:title="@string/menu_songs" android:orderInCategory="1">
        <menu>
            <item android:id="@+id/menu_songs_create" android:title="@string/menu_songs_create" android:enabled="true"/>
            <item android:id="@+id/menu_songs_import" android:title="@string/menu_songs_import" android:enabled="true"/>
            <item android:id="@+id/menu_songs_find" android:title="@string/menu_songs_find" android:enabled="true"/>
            <item android:id="@+id/menu_songs_clear" android:title="@string/menu_songs_clear" android:enabled="true"/>
        </menu>
    </item>
    <item android:id="@+id/menu_song_groups" android:title="@string/menu_song_groups" android:orderInCategory="3" android:menuCategory="container">
        <menu>
            <item android:id="@+id/menu_song_groups_create" android:title="@string/menu_song_groups_create" android:enabled="true"/>
            <item android:id="@+id/menu_song_groups_delete" android:title="@string/menu_song_groups_delete" android:enabled="true"/>
            <item android:id="@+id/menu_song_groups_delete_all" android:enabled="true" android:title="@string/menu_song_groups_delete_all"/>
        </menu>
    </item>
    <item android:id="@+id/menu_set_groups" android:title="@string/menu_set_groups" android:orderInCategory="4" android:menuCategory="container">
        <menu>
            <item android:id="@+id/menu_set_groups_create" android:title="@string/menu_set_groups_create"/>
            <item android:id="@+id/menu_set_groups_delete" android:title="@string/menu_set_groups_delete"/>
            <item android:id="@+id/menu_set_groups_delete_all" android:title="@string/menu_set_groups_delete_all"/>
        </menu>
    </item>
    <item android:id="@+id/menu_more" android:title="@string/menu_more" android:orderInCategory="5" android:menuCategory="container">
        <menu>
            <item android:id="@+id/menu_settings" android:title="@string/menu_settings" android:orderInCategory="1"/>
            <item android:id="@+id/menu_backup" android:title="@string/menu_backup" android:orderInCategory="2" android:menuCategory="container">
                <menu>
                    <item android:id="@+id/menu_backup_export" android:title="@string/menu_backup_export"/>
                    <item android:id="@+id/menu_backup_import" android:title="@string/menu_backup_import"/>
                </menu>
            </item>
            <item android:id="@+id/menu_about_howto" android:title="@string/menu_about_howto" android:orderInCategory="3"/>
            <item android:id="@+id/menu_about_about" android:title="@string/menu_about" android:orderInCategory="4"/>
        </menu>
    </item>

</menu>
