<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sbgsoft.songbook.songs.EditSongDetailsActivity"
    tools:showIn="@layout/activity_edit_song_details">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_song_name"
                android:textSize="20sp"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>

            <EditText
                android:id="@+id/editatt_song_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="20sp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_song_author"
                android:textSize="20sp"
                android:paddingTop="15dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>

            <EditText
                android:id="@+id/editatt_song_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="20sp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_song_key"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editatt_song_key"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_song_link"
                android:textSize="20sp"
                android:paddingTop="15dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>

            <EditText
                android:id="@+id/editatt_song_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="20sp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:visibility="visible"
                android:orientation="horizontal"
                android:weightSum="7">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_song_bpm"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editatt_song_bpm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textSize="20sp"
                    android:paddingLeft="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/add_song_time"
                    android:textSize="20sp"
                    android:paddingLeft="15dp"/>

                <Spinner
                    android:id="@+id/editatt_song_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:entries="@array/time_signatures"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_song_subnote"
                android:textSize="12sp"
                android:textStyle="italic"
                android:gravity="center"
                android:paddingTop="25dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
