<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:themetv="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tab_current"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top">    
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="horizontal" >

        <com.sbgsoft.songbook.views.SongBookThemeTextView
            android:id="@+id/current_set_tab_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/currentSetTitleTextSize"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:textStyle="bold"
            android:text="@string/title_current_set"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"
            themetv:useShadow="true"
            themetv:isTitle="true" />

        <com.sbgsoft.songbook.views.SongBookThemeTextView
            android:id="@+id/current_set_tab_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:textSize="@dimen/currentSetLinkTextSize"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:textStyle="normal"
            android:text="@string/empty_string"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"
            android:linksClickable="true"
            themetv:useShadow="true"
            themetv:isTitle="true"/>

    </RelativeLayout>

    <View
        android:id="@+id/currset_separator_bar"
        android:layout_width="fill_parent"
        android:layout_height="3dip"/>
    
    <ListView android:id="@+id/current_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"/>
    
  	<TextView android:id="@+id/empty_current"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/empty_current"
        android:textColor="@color/defaultTextColor" />

</LinearLayout>